--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,1 +1,8 @@
+apiVersion: v2
+name: eks-helm-deploy
+description: A Helm chart for deploying nginx via Jenkins on EKS
+
+type: application
+version: 1.0.0
+appVersion: "1.0.0"
 
